cmd/ook/y.output

state 0
	$accept: .program $end 
	stmts: .    (2)

	.  reduce 2 (src line 32)

	program  goto 1
	stmts  goto 2

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  stmts.    (1)
	stmts:  stmts.stmt 

	'O'  shift 12
	.  reduce 1 (src line 24)

	stmt  goto 3
	Right  goto 5
	Left  goto 6
	Increment  goto 7
	Decrement  goto 8
	Output  goto 9
	Input  goto 10
	Begin  goto 4
	Ook  goto 11

state 3
	stmts:  stmts stmt.    (3)

	.  reduce 3 (src line 37)


state 4
	stmt:  Begin.stmts End 
	stmts: .    (2)

	.  reduce 2 (src line 32)

	stmts  goto 13

state 5
	stmt:  Right.    (5)

	.  reduce 5 (src line 51)


state 6
	stmt:  Left.    (6)

	.  reduce 6 (src line 57)


state 7
	stmt:  Increment.    (7)

	.  reduce 7 (src line 63)


state 8
	stmt:  Decrement.    (8)

	.  reduce 8 (src line 69)


state 9
	stmt:  Output.    (9)

	.  reduce 9 (src line 75)


state 10
	stmt:  Input.    (10)

	.  reduce 10 (src line 81)


state 11
	Right:  Ook.'.' Ook '?' 
	Left:  Ook.'?' Ook '.' 
	Increment:  Ook.'.' Ook '.' 
	Decrement:  Ook.'!' Ook '!' 
	Input:  Ook.'.' Ook '!' 
	Output:  Ook.'!' Ook '.' 
	Begin:  Ook.'!' Ook '?' 

	'.'  shift 14
	'?'  shift 15
	'!'  shift 16
	.  error


state 12
	Ook:  'O'.'o' 'k' 

	'o'  shift 17
	.  error


state 13
	stmts:  stmts.stmt 
	stmt:  Begin stmts.End 

	'O'  shift 12
	.  error

	stmt  goto 3
	Right  goto 5
	Left  goto 6
	Increment  goto 7
	Decrement  goto 8
	Output  goto 9
	Input  goto 10
	Begin  goto 4
	End  goto 18
	Ook  goto 19

state 14
	Right:  Ook '.'.Ook '?' 
	Increment:  Ook '.'.Ook '.' 
	Input:  Ook '.'.Ook '!' 

	'O'  shift 12
	.  error

	Ook  goto 20

state 15
	Left:  Ook '?'.Ook '.' 

	'O'  shift 12
	.  error

	Ook  goto 21

state 16
	Decrement:  Ook '!'.Ook '!' 
	Output:  Ook '!'.Ook '.' 
	Begin:  Ook '!'.Ook '?' 

	'O'  shift 12
	.  error

	Ook  goto 22

state 17
	Ook:  'O' 'o'.'k' 

	'k'  shift 23
	.  error


state 18
	stmt:  Begin stmts End.    (4)

	.  reduce 4 (src line 43)


state 19
	Right:  Ook.'.' Ook '?' 
	Left:  Ook.'?' Ook '.' 
	Increment:  Ook.'.' Ook '.' 
	Decrement:  Ook.'!' Ook '!' 
	Input:  Ook.'.' Ook '!' 
	Output:  Ook.'!' Ook '.' 
	Begin:  Ook.'!' Ook '?' 
	End:  Ook.'?' Ook '!' 

	'.'  shift 14
	'?'  shift 24
	'!'  shift 16
	.  error


state 20
	Right:  Ook '.' Ook.'?' 
	Increment:  Ook '.' Ook.'.' 
	Input:  Ook '.' Ook.'!' 

	'.'  shift 26
	'?'  shift 25
	'!'  shift 27
	.  error


state 21
	Left:  Ook '?' Ook.'.' 

	'.'  shift 28
	.  error


state 22
	Decrement:  Ook '!' Ook.'!' 
	Output:  Ook '!' Ook.'.' 
	Begin:  Ook '!' Ook.'?' 

	'.'  shift 30
	'?'  shift 31
	'!'  shift 29
	.  error


state 23
	Ook:  'O' 'o' 'k'.    (11)

	.  reduce 11 (src line 89)


state 24
	Left:  Ook '?'.Ook '.' 
	End:  Ook '?'.Ook '!' 

	'O'  shift 12
	.  error

	Ook  goto 32

state 25
	Right:  Ook '.' Ook '?'.    (12)

	.  reduce 12 (src line 93)


state 26
	Increment:  Ook '.' Ook '.'.    (14)

	.  reduce 14 (src line 107)


state 27
	Input:  Ook '.' Ook '!'.    (16)

	.  reduce 16 (src line 121)


state 28
	Left:  Ook '?' Ook '.'.    (13)

	.  reduce 13 (src line 100)


state 29
	Decrement:  Ook '!' Ook '!'.    (15)

	.  reduce 15 (src line 114)


state 30
	Output:  Ook '!' Ook '.'.    (17)

	.  reduce 17 (src line 128)


state 31
	Begin:  Ook '!' Ook '?'.    (18)

	.  reduce 18 (src line 135)


state 32
	Left:  Ook '?' Ook.'.' 
	End:  Ook '?' Ook.'!' 

	'.'  shift 28
	'!'  shift 33
	.  error


state 33
	End:  Ook '?' Ook '!'.    (19)

	.  reduce 19 (src line 142)


9 terminals, 13 nonterminals
20 grammar rules, 34/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
62 working sets used
memory: parser 25/30000
0 extra closures
23 shift entries, 1 exceptions
18 goto entries
8 entries saved by goto default
Optimizer space used: output 36/30000
36 table entries, 0 zero
maximum spread: 9, maximum offset: 24
